Apply sibukawa's fix of GLFW for MacOS
This fix is based on shibukawa's fix:
  https://github.com/glfw/glfw/pull/658
  https://github.com/shibukawa/glfw-1/commit/d36a164423c933948661f3f17576e5a6388ff251

--- a/src/external/glfw/CMakeLists.txt
+++ b/src/external/glfw/CMakeLists.txt
@@ -227,12 +227,13 @@ endif()
 if (_GLFW_COCOA)
 
     list(APPEND glfw_LIBRARIES
+        "-framework Carbon"
         "-framework Cocoa"
         "-framework IOKit"
         "-framework CoreFoundation")
 
     set(glfw_PKG_DEPS "")
-    set(glfw_PKG_LIBS "-framework Cocoa -framework IOKit -framework CoreFoundation")
+    set(glfw_PKG_LIBS "-framework Carbon -framework Cocoa -framework IOKit -framework CoreFoundation")
 endif()
 
 #--------------------------------------------------------------------
